# Linkedin-Updater

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  daily_pipeline.yml
.streamlit/: config.toml
app/: streamlit_app.py
app/components/: .gitkeep
app/pages/: .gitkeep
migrations/: env.py  script.py.mako
migrations/sql/: least_privilege_role.sql
migrations/versions/: .gitkeep  001_initial_schema.py
src/: config.py
src/db/: __init__.py  engine.py  models.py  repository.py
src/linkedin/: __init__.py  oauth.py  publisher.py
src/llm/: __init__.py  client.py  prompts.py
src/notify/: __init__.py  webhook.py
src/pipeline/: __init__.py  run_daily.py
src/search/: __init__.py  exa_client.py  filter.py
tests/: test_config.py  test_dedupe.py  test_filter.py  test_integration_db.py  test_linkedin.py  test_llm.py  test_pipeline.py  test_webhook.py
tests/fixtures/: articles.json
