[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-updater"
version = "0.1.0"
description = "Industry news aggregator with SimCorp-safe LinkedIn draft automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.32.0",
  "sqlalchemy>=2.0.25",
  "psycopg2-binary>=2.9.9",
  "alembic>=1.13.1",
  "requests>=2.31.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-mock>=3.12.0",
  "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "integration: tests that require TEST_DATABASE_URL (Neon/Postgres)",
]
addopts = "-q --strict-markers"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app*"]
